--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "shanerbaner82/panel-roles": "^0.0.3",
+        "spatie/laravel-medialibrary": "*",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
