--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "*",
         "flowframe/laravel-trend": "^0.2.0",
+        "ibrahimbougaoua/filament-rating-star": "^1.0",
+        "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "mokhosh/filament-rating": "^1.1",
         "shanerbaner82/panel-roles": "^0.0.3",
         "spatie/laravel-medialibrary": "*",
         "spatie/laravel-permission": "^6.9"
