--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "mokhosh/filament-rating": "^1.1",
+        "phpsa/filament-password-reveal": "^2.1",
         "shanerbaner82/panel-roles": "^0.0.3",
         "spatie/laravel-medialibrary": "*",
         "spatie/laravel-permission": "^6.9"
