checkout with stripe and middleware for checkout

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "flowframe/laravel-trend": "^0.2.0",
         "ibrahimbougaoua/filament-rating-star": "^1.0",
         "joaopaulolndev/filament-edit-profile": "^1.0",
+        "laravel/cashier": "^15.4",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
@@ -18,7 +19,8 @@
         "phpsa/filament-password-reveal": "^2.1",
         "shanerbaner82/panel-roles": "^0.0.3",
         "spatie/laravel-medialibrary": "*",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.9",
+        "stripe/stripe-php": "^13.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
