Your commit message

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "*",
         "flowframe/laravel-trend": "^0.2.0",
+        "guzzlehttp/guzzle": "^7.8",
         "ibrahimbougaoua/filament-rating-star": "^1.0",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/cashier": "^15.4",
@@ -16,6 +17,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "mokhosh/filament-rating": "^1.1",
+        "nesbot/carbon": "^3.7",
         "phpsa/filament-password-reveal": "^2.1",
         "shanerbaner82/panel-roles": "^0.0.3",
         "spatie/laravel-medialibrary": "*",
